tests/snapshots/asymmetric_visibility_validation__asymmetric_visibility_in_constructor_promotion.snap
---
source: tests/asymmetric_visibility_validation.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 16,
                },
            },
            extends: None,
            implements: [],
            members: [
                Method {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 23,
                                end: 29,
                            },
                        },
                    ],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 39,
                            end: 50,
                        },
                    },
                    params: [
                        Param {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Public,
                                    span: Span {
                                        start: 60,
                                        end: 66,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Error,
                                span: Span {
                                    start: 60,
                                    end: 79,
                                },
                            },
                            ty: None,
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 60,
                                end: 79,
                            },
                        },
                        Param {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 87,
                                    end: 96,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeString,
                                        span: Span {
                                            start: 80,
                                            end: 86,
                                        },
                                    },
                                ),
                            ),
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 80,
                                end: 96,
                            },
                        },
                        Param {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Public,
                                    span: Span {
                                        start: 106,
                                        end: 112,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Error,
                                span: Span {
                                    start: 106,
                                    end: 127,
                                },
                            },
                            ty: None,
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 106,
                                end: 127,
                            },
                        },
                        Param {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 135,
                                    end: 141,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeString,
                                        span: Span {
                                            start: 128,
                                            end: 134,
                                        },
                                    },
                                ),
                            ),
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 128,
                                end: 141,
                            },
                        },
                    ],
                    return_type: None,
                    body: [],
                    doc_comment: None,
                    span: Span {
                        start: 23,
                        end: 152,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 153,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 153,
    },
}
